--- a/Bootstrap_website/style.css
+++ b/Bootstrap_website/style.css
@@ -1,3 +1,15 @@
+body::before {
+    display: block;
+    content: '';
+    height: 60px;
+}
+
+#map {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+}
+
 @media (min-width: 768px) {
     .news-input {
         width: 50%;
